@@ -21,6 +21,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #7774: Set sys.executable to an empty string if argv[0] has been
+  set to an non existent program name and Python is unable to retrieve the real
+  program name
+
 - Issue #1054943: Fix unicodedata.normalize('NFC', text) for the Public Review
   Issue #29
 
